fixed qoute in slogan not showing correctly

--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,7 @@ img {
 
 .slogan {
   text-align: center;
+  width: 30rem;
 }
 
 .header {
